<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:orientation="vertical">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animIcon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/title"
            android:text="@string/your_device_is_fully_compatible"
            android:textSize="22dp"
            android:textStyle="bold"
            android:fontFamily="@font/lato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_height="50dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/android_version"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/isAndroidOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="✔️"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_height="50dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/root_access"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/isRootOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="✔️"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_height="50dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/wlan0_monitor_mode"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/isMonitModeOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="✔️"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_height="50dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/usb_otg_support"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/isUsbOtgOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="✔️"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_height="50dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:fontFamily="@font/lato"
                        android:text="@string/modules_support"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/isModulesOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="✔️"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:id="@+id/title2"
            android:fontFamily="@font/lato"
            android:text="Neternels drivers"
            android:gravity="center"/>
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Insmod modules on boot"
            android:layout_marginTop="10dp"
            android:id="@+id/boot"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/list"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:id="@+id/title3"
            android:fontFamily="@font/lato"
            android:text="@string/enabled_devices_drivers"
            android:gravity="center"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"

            android:layout_margin="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/driverList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="A\nBig\nList\nOf\nEnabled\nDrivers"
                    android:layout_margin="20dp"
                    android:textIsSelectable="true"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</ScrollView>